changed the grunt file to build directly to the backend pages folder added a package json removed www fixed some naming issues in the factory

--- a/app/src/results/details.html
+++ b/app/src/results/details.html
@@ -1,3 +1,10 @@
 <div>
-	Results Details
+	Details 
+	<div>
+		{{api.selected.food_name}}<br>
+		{{api.selected.food_description}}
+	</div>
+	<div>{{api.selected.restaurant}} </div>
+	<div>{{api.selected.restaurant_location}} </div>
+	<div>{{api.selected.phone}}</div>
 </div>
