--- a/app/src/results/list.html
+++ b/app/src/results/list.html
@@ -1,6 +1,6 @@
 <div>
 	Food List
-	<div ng-repeat="item in results">
+	<div id='foodList' ng-repeat="item in results">
 		{{item.name}}<br>
 		{{item.description}}
 	</div>
