--- a/backend/test/test-get.html
+++ b/backend/test/test-get.html
@@ -34,6 +34,8 @@
 			// 	console.log( "DIDN'T PARSE JSON " + e );
 			// }
 
+			console.log( data );
+
 			$( "#results" ).html( "<p>" + JSON.stringify( data ) + "</p>" );
 		});
 
