--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
 		<!--<base href="/~storm/CS360/project/app/www/">-->
 	</head>
 
-	<div>
-		Food Dictionary
+	<div id = "banner">
+		<h1>Gustare</h1>
 	</div>
 	<div ui-view></div>
 
