--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Food Dictionary</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-		<script src="libs/angular-ui-router.min.js"></script>
+		<!--<script src="libs/angular-ui-router.min.js"></script>-->
 		<script src="app.js"></script>
 		<script src="templates.js"></script>
 		<link rel="stylesheet" type="text/css" href="app.css">
