Fixed invalid search and temp css for results

--- a/app/src/results/details.html
+++ b/app/src/results/details.html
@@ -1,8 +1,10 @@
 <div>
-	Details 
-	<div>
+	<div id="detailsBanner">Details</div> 
+	<div id="selectedFood">
 		{{api.selected.food_name}}<br>
-		{{api.selected.food_description}}
+		<div id="description">
+			{{api.selected.food_description}}
+		</div>
 	</div>
 	<div>{{api.selected.restaurant}} </div>
 	<div>{{api.selected.restaurant_location}} </div>
